tests/toy/neg/000766_mutation.toylang
program a = { a = 0 var a : bool; } .
